--- a/css/style.css
+++ b/css/style.css
@@ -34,9 +34,11 @@ html{
 .menu__a{
     text-decoration: none;
 }
-
+.menu__a:visited{
+    color: black;
+}
 .menu a:hover{
-    text-decoration: underline;
+    color: rgb(200, 130, 0);
 }
 
 /* Principal */
