--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 
 html{
     font-size: 10px;
+    font-family: 'Open Sans', sans-serif;;
 }
 
 .container{
@@ -20,6 +21,7 @@ html{
 }
 
 .titulo{
+    font-family: 'Lato', sans-serif;
     font-size: 4rem;
     padding: 5rem 0;
     text-align: center;
@@ -31,6 +33,7 @@ html{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
+    background-position-y: -20px;
 }
 
 /* Cabecera */
@@ -41,12 +44,11 @@ html{
     justify-content: space-between;
     align-items: center;
     padding: 0 25px;
-    /* position: fixed; */
 }
 
 .menu {
     display: inherit;
-    font-size: 2.2rem;
+    font-size: 2rem;
     width: 700px;
     justify-content: space-between;
 }
@@ -108,7 +110,7 @@ html{
 }
 
 .item{
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     margin-bottom: 20px;
     list-style: none;
 }
@@ -117,11 +119,36 @@ html{
     color: red;
 }
 
-/* Formación */
+/* Estudios */
 .academica{
-    background-color: rgb(214, 214, 214);
+    background-color: rgb(233, 233, 233);
+    padding: 6rem 0;
+}
+
+.academica__container{
+    padding: initial;
 }
 
 .academica__titulo{
-    color: black;
+    color: rgb(5, 5, 150);
+    font-size: 5rem;
+    width: 50%;
+}
+
+.academica__estudios{
+    font-size: 1.6rem;
+    width: 50%;
+    list-style: none;
+    /* font-weight: 700; */
+}
+
+.academica__estudios__li{
+    position: relative;
+    padding:0 0 .5rem .5rem;
+}
+
+.academica__estudios__li::before{
+    content: '✔';
+    position: absolute;
+    left: -12px;
 }
