--- a/css/style.css
+++ b/css/style.css
@@ -122,12 +122,18 @@ html{
 
 /* Estudios */
 .academica{
-    background-color: rgb(233, 233, 233);
+    /* background-color: rgb(233, 233, 233); */
+    background-image: url(../img/Sky-2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 6rem 0;
 }
 
 .academica__container{
     padding: initial;
+    background-color: rgba(255, 255, 255, .5);
+    border-radius: 30px;
+    padding: 2rem;
 }
 
 .academica__titulo{
@@ -138,9 +144,10 @@ html{
 }
 
 .academica__estudios{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     width: 50%;
     list-style: none;
+    font-weight: 600;
 }
 
 .academica__estudios__li{
