--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ html{
     background-image: url(../img/main-city-copy-2.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100%;
     background-position-y: -20px;
+    background-size: cover;
 }
 
 /* Cabecera */
@@ -68,7 +68,6 @@ html{
 /* Principal */
 .hero{
     height: 600px;
-    background-position-y: -200px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -213,4 +212,19 @@ html{
 .facebook{
     background-image: url(https://i.imgur.com/FoqLAr8.png);
     background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 1023px){
+    html{
+        font-size: 8px;
+    }
+    ..header-principal{
+        background-size: cover;
+    }
+}
+
+@media screen and (max-width: 767px){
+    .header-principal{
+        background-size: auto;
+    }
 }
