--- a/css/style.css
+++ b/css/style.css
@@ -37,26 +37,44 @@ html{
     background-size: cover;
 }
 
+.boton-menu{
+    display: none;
+    background-color: rgb(27, 33, 39);
+    color: white;
+    font-size: 2rem;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    position: fixed;
+    top: 25px;
+    right: 5px;
+    z-index: 3;
+}
+
 /* Cabecera */
 .encabezado {
     width: 100%;
     height: 100px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 0 3rem;
+    border-bottom: 1px solid white;
 }
 
 .menu {
     display: inherit;
     font-size: 2rem;
-    width: 800px;
+    max-width: 800px;
     justify-content: space-between;
 }
 
 .menu__a{
     text-decoration: none;
     color: white;
+    margin-right: 3rem;
 }
 .menu__a:visited{
     color: white;
@@ -218,13 +236,39 @@ html{
     html{
         font-size: 8px;
     }
-    ..header-principal{
-        background-size: cover;
+    .menu__a{
+        margin-right: 1.5rem;
+    }
+    .hero{
+        height: 400px;
+    }
+    .perfil__img{
+        height: 400px;
     }
 }
 
 @media screen and (max-width: 767px){
-    .header-principal{
-        background-size: auto;
+    .boton-menu{
+        display: flex;
+    }
+    .encabezado{
+        height: auto;
+        border-bottom: initial;
+    }
+    .logo{
+        /* display: block; */
+        width: 100%;
+    }
+    .menu{
+        display: block;
+        width: 100%;
+        height: auto;
+        text-align: center;
+        margin: 0 auto;
+        background-color: #02050b;
+    }
+    .menu__a{
+        display: inherit;
+        margin: 3rem 0;
     }
 }
