--- a/css/style.css
+++ b/css/style.css
@@ -265,10 +265,19 @@ html{
         height: auto;
         text-align: center;
         margin: 0 auto;
-        background-color: #02050b;
+        background-color: rgba(2, 5, 11, 0.8);
+        position: fixed;
+        top: 0;
+        right: -100vw;
+        width: 100vw;
+        height: 100vh;
+        transition: .3s;
+    }
+    .menu.is-active{
+        right: 0;
     }
     .menu__a{
         display: inherit;
-        margin: 3rem 0;
+        margin: 4rem 0;
     }
 }
