--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,16 @@ html{
 }
 
 /* Cabecera */
+.logo{
+    height: 9rem;
+    margin-left: 5rem;
+}
+
+.logo img{
+    height: inherit;
+    border-radius: 20px;
+}
+
 .encabezado {
     width: 100%;
     height: 100px;
@@ -258,6 +268,10 @@ html{
 }
 
 @media screen and (max-width: 767px){
+    .logo{
+        margin: 1rem;
+        height: 7rem;
+    }
     .boton-menu{
         display: flex;
     }
